Adding more file to the repo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Welcome to code with git</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos rem, vero fugiat veritatis possimus magnam est sapiente animi velit soluta incidunt odit ipsum doloremque veniam ab sed libero fugit quibusdam!
+    </p>
 </body>
 </html>
