--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Code With Git</title>
+    <title>Document</title>
 </head>
 <body>
-    <h2>Learn About Us!</h2>
+    
 </body>
 </html>
